# ChangeLog for games-emulation/atari800
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-emulation/atari800/ChangeLog,v 1.24 2008/07/24 16:23:40 armin76 Exp $

  24 Jul 2008; Raúl Porcel <armin76@gentoo.org> atari800-2.0.3.ebuild:
  alpha/sparc/x86 stable wrt #232298

  21 Jul 2008; nixnut <nixnut@gentoo.org> atari800-2.0.3.ebuild:
  Stable on ppc wrt bug 232298

*atari800-2.0.3 (13 Jul 2007)

  13 Jul 2007; Michael Sterrett <mr_bones_@gentoo.org>
  +atari800-2.0.3.ebuild:
  version bump

  21 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  01 Dec 2006; Chris Gianelloni <wolf31o2@gentoo.org> atari800-2.0.2.ebuild:
  Stable on alpha wrt bug #153645.

  01 Dec 2006; Chris Gianelloni <wolf31o2@gentoo.org> atari800-1.3.6.ebuild,
  atari800-2.0.1.ebuild:
  Removing old virtual/x11 dependency.

  23 Nov 2006; Tristan Heaven <nyhm@gentoo.org> atari800-2.0.2.ebuild:
  Fix hardcoded paths

  22 Nov 2006; Joseph Jezak <josejx@gentoo.org> atari800-2.0.2.ebuild:
  Marked ppc stable for bug #153645.

  15 Nov 2006; Gustavo Zacarias <gustavoz@gentoo.org> atari800-2.0.2.ebuild:
  Stable on sparc wrt #153645

  14 Nov 2006; Andrej Kacian <ticho@gentoo.org> atari800-2.0.2.ebuild:
  Stable on x86, bug #153645.

*atari800-2.0.2 (10 Apr 2006)

  10 Apr 2006; Michael Sterrett <mr_bones_@gentoo.org>
  +atari800-2.0.2.ebuild:
  version bump

*atari800-2.0.1 (17 Mar 2006)

  17 Mar 2006; <Tupone@gentoo.org> +atari800-2.0.1.ebuild:
  Version bump (Bug #120605) Thanks to James L. Hammons for report

  02 Feb 2006; Michael Sterrett <mr_bones_@gentoo.org>
  atari800-1.3.6.ebuild:
  modular X deps

*atari800-1.3.6 (03 Aug 2005)

  03 Aug 2005; Michael Sterrett <mr_bones_@gentoo.org>
  +atari800-1.3.6.ebuild:
  version bump (bug #101221)

  29 Mar 2005; Jan Brinkmann <luckyduck@gentoo.org> atari800-1.3.5.ebuild:
  added ~amd64 to KEYWORDS, fixes #74444

*atari800-1.3.5 (30 Dec 2004)
