@@ -1,6 +1,12 @@
 # ChangeLog for games-emulation/atari800
-# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-emulation/atari800/ChangeLog,v 1.24 2008/07/24 16:23:40 armin76 Exp $
+# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-emulation/atari800/ChangeLog,v 1.25 2009/04/25 01:43:06 mr_bones_ Exp $
+
+*atari800-2.1.0 (25 Apr 2009)
+
+  25 Apr 2009; Michael Sterrett <mr_bones_@gentoo.org>
+  +atari800-2.1.0.ebuild:
+  version bump
 
   24 Jul 2008; Raúl Porcel <armin76@gentoo.org> atari800-2.0.3.ebuild:
   alpha/sparc/x86 stable wrt #232298
